# astropop

./: .codacy.yml  .coveralls.yml  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pep8speaks.yml  .readthedocs.yml  .rtd-environment.yml  .travis.yml  .travis_setup.sh  CHANGES.md  CHANGES.rst  LICENSE.rst  MANIFEST.in  README.md  README.rst  ROADMAP.rst  codecov.yml  install_requires  pep8speaks.yml  pip-requirements  pip-requirements-doc  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  tox.ini
.github/.workflows/: python-tests.yml
.github/workflows/: build-n-publish.yml  ci_devdeps.yml  ci_workflows.yml  code_quality_analysis.yml  codeql.yml  coverage-conda.yml  python-tests.yml  unit-tests-anaconda.yml  unit-tests.yml
.theia/: settings.json
astropop/: __init__.py  _astropy_init.py  _ccddata_decorator.py  _db.py  _unit_property.py  ccddata.py  conftest.py  file_collection.py  file_manager.py  fits_utils.py  flags.py  framedata.py  logger.py  memmap.py  pipelines.py  py_utils.py  testing.py
astropop/astrometry/: __init__.py  astrometry.py  astrometrynet.py  coords_utils.py  manual_wcs.py
astropop/astrometry/tests/: test_astrometry.py
astropop/catalogs/: __init__.py  _online_tools.py  _sources_catalog.py  base_catalog.py  gaia.py  local.py  online.py  simbad.py  tap.py  utils.py  vizier.py
astropop/catalogs/tests/: test_online.py
astropop/catalogs/vizier_catalogs/: 2mass.yml  allwise.yml  apass9.yml  denis.yml  gcvs.yml  gsc242.yml  gvsc.yml  hip.yml  skymapper.yml  twomass.yml  tyc.yml  tycho2.yml  ucac4.yml  ucac5.yml  vsx.yml  wise.yml
astropop/framedata/: __init__.py  _compat.py  _memmap.py  _meta.py  cache_manager.py  compat.py  framedata.py  memmap.py  util.py  utils.py
astropop/framedata/tests/: test_compat.py  test_framedata.py  test_memmap.py  test_unit_property.py
astropop/image/: __init__.py  _tools.py  calibration.py  imarith.py  imcombine.py  processing.py  register.py
astropop/image_processing/: __init__.py  ccd_processing.py  ccdproc.py  helloWorld.py  imarith.py  register.py  sum2.py  utils.py
astropop/image_processing/tests/: test_ccdprocessing.py  test_imarith.py  test_imarith2.py  test_imcombine.py  test_register.py  test_separated_imarith.py
astropop/math/: __init__.py  _deriv.py  array.py  gaussian.py  hasher.py  models.py  moffat.py  opd_utils.py  physical.py  reproject.py  slices.py
astropop/math/models/: gaussian.py  moffat.py
astropop/math/tests/: test_math.py  test_physical.py  test_physical_numpyfuncs.py
astropop/photometry/: ._sep.py  __init__.py  _phot.py  _utils.py  aperture.py  aperture_photometry.py  background.py  detection.py  lightcurve.py  photometry.py  photutils_wrapper.py  sep_wrapper.py  solve_photometry.py
astropop/photometry/_draft_psf/: gaussian.py  moffat.py  moffat_psf.py  psf_fitting.py  psf_kernels.py
astropop/photometry/_old_code/: lightcurve.py
astropop/photometry/tests/: __init__.py  gen_pol.py  test_aperture.py  test_detection.py
astropop/pipelines/: __init__.py  _base.py  astromerty_scripts.py  astrometry_scripts.py  base.py  boss.py  calib_scripts.py  common_calib.py  common_instruments.py  core.py  image_processing.py  instrument.py  photometry.py  photometry_scripts.py  pipeline.py  polarimetry.py  polarimetry_scripts.py  product.py  stage.py
astropop/pipelines/automatic/: aavso.py  common.py  common_photometry.py  common_polarimetry.py  common_processing.py  impacton.py  opd.py  polima2.py
astropop/pipelines/common/: singleccd.py  stages.py
astropop/pipelines/config_based/: __init__.py  base.py  photometry.py  (+2 more)
astropop/plot_utils/: __init__.py  ds9norm.py  plot_polarimetry.py  skyview.py
astropop/polarimetry/: __init__.py  _dualbeam_utils.py  calcite_polarimetry.py  dualbeam.py  gen_pol.py  pccdpack_wrapper.py  polarimetry_models.py  solve_polarimetry.py
astropop/simulate/: stars.py
astropop/tests/: test_ccddata.py  test_framedata.py  test_logger.py  test_memmap.py  test_pipeline.py  test_pyutils.py  test_testing.py  test_unit_property.py
ci/: travis_setup.sh
docs/: Makefile  _astropy_conf.py  _sphinx_conf.py  api.rst  astrometry.rst  catalogs.rst  ccdprocessing.rst  conf.py  data_structures.rst  files.rst  fits_utils.rst  framedata.rst  imarith.rst  index.rst  logger.rst  memmap.rst  photometry.rst  physical.rst  pipelines.rst  pixel_convention.rst  polarimetry.rst  py_utils.rst  reducing.rst  references.rst  references.txt  registering.rst  testing.rst  tools.rst  tutorials.rst  user_guide.rst
docs/_static/: jupyter-sphinx.css
docs/astropop/: index.rst
docs/data_structures/: framedata.rst  memmap.rst  physical.rst
docs/dev/: pixel_convention.rst
docs/ipynb/: aperture_photometry.ipynb  astrometry_example.ipynb  diy_reduction_script.ipynb  online_catalogs.ipynb
docs/reduction/: astrometry.rst  ccdprocessing.rst  imarith.rst  photometry.rst  pipelines.rst  polarimetry.rst  registering.rst
docs/tools/: catalogs.rst  files.rst  fits_utils.rst  logger.rst  py_utils.rst  testing.rst
docs/tutorials/: astropop_polarization_models.ipynb
licenses/: LICENSE.rst
scripts/: aavsobsm_process.py  astropop_pipeline  astropop_pipeline.py  fitsheader_set  fitsheader_set.py  iagpol_process.py  impacton_process.py  polima2_process  robo40_process.py
tests/: conftest.py  gen_pol.py  skip_test_astrometry.py  test_aperture.py  test_astrometry.py  test_catalog_online.py  test_catalogs.py  test_catalogs_online.py  test_ccdprocessing.py  test_db.py  test_detection.py  test_filecollection.py  test_filemanager.py  test_fits_utils.py  test_flags.py  test_framedata.py  test_framedata_cachemanager.py  test_framedata_compat.py  test_framedata_getset.py  test_framedata_io.py  test_framedata_memmap.py  test_framedata_meta.py  test_framedata_tools.py  test_framedata_utils.py  test_image_mergers.py  test_image_processing.py  test_imarith.py  test_imarith2.py  test_imcombine.py  test_logger.py  test_math.py  test_math_models.py  test_memmap.py  test_physical.py  test_physical_numpyfuncs.py  test_pipeline.py  test_polarimetry.py  test_processing.py  test_pyutils.py  test_register.py  (+2 more)
(+10 files in other folders)
