[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.5
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = astropop
description = Astronomical Polarimetry and Photometry pipeline
long_description =
author = Julio Campagnolo
author_email = juliocampagnolo@gmail.com
license = BSD 3-Clause
url = https://github.com/juliotux/astropop
edit_on_github = False
github_project = juliotux/astropop
install_requires = astropy, scipy, matplotlib, numpy, sep, astroquery, cython, scikit-image
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.1

[entry_points]

astropop = astropop:main
