[metadata]
name = astropop
author = Julio Campagnolo
author_email = julio.campagnolo@cefet-rj.br
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/sparc4-dev/astropop
description = Astronomical Polarimetry and Photometry Pipeline
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = sparc4-dev/astropop

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    numpy
    scipy
    astroquery
    scikit-image
    matplotlib
    pytz
    pyyaml
    astroscrappy
    astroalign
    sep
    uncertainties


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
astropop = data/*

[tool:pytest]
testpaths = "astropop" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    astropop/_astropy_init*
    astropop/conftest.py
    astropop/*setup_package*
    astropop/tests/*
    astropop/*/tests/*
    astropop/extern/*
    astropop/version*
    */astropop/_astropy_init*
    */astropop/conftest.py
    */astropop/*setup_package*
    */astropop/tests/*
    */astropop/*/tests/*
    */astropop/extern/*
    */astropop/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
